syntax = "proto3";

package protoExample;

//避免protoc-gen-go: unable to determine Go import path fo
option go_package = "./protobufExample";

service serviceExample {
    rpc UnaryTrans (RequestData) returns (ResponseData) {};
    rpc ServerStream (RequestData) returns (stream ResponseData) {};
    rpc ClientStream (stream RequestData) returns (ResponseData) {};
    rpc AllStream (stream RequestData) returns (stream RequestData) {};
}

message RequestData {
    string data = 1;
}

message ResponseData {
    string data = 1;
}
//
